# CryptoBack/Models/InvestmentDto.cs
@@ -4,11 +4,9 @@ public class InvestmentDto
 {
     public DateTime Date { get; set; }
 
-    public decimal CoinAmmount { get; set; }
+    public decimal CoinPrice { get; set; }
 
     public decimal InvestmentValue { get; set; }
 
     public string CoinName { get; set; } = "";
-
-    public bool RepeatMonthly { get; set; }
 }
