# CryptoBack/Models/InvestmentModel.cs
@@ -10,7 +10,7 @@ public class InvestmentModel
 
     public DateTime Date { get; set; }
 
-    public decimal CoinAmmount { get; set; }
+    public decimal CoinPrice { get; set; }
 
     public decimal InvestmentValue { get; set; }
 
