# CryptoMaui/CryptoMaui/ViewModels/AddInvestmentViewModel.cs
@@ -1,6 +1,7 @@
 ﻿using BackendClient;
 using CommunityToolkit.Mvvm.ComponentModel;
-using System.Collections.ObjectModel;
+using CommunityToolkit.Mvvm.Input;
+
 
 namespace CryptoMaui.ViewModels;
 
@@ -32,13 +33,37 @@ public partial class AddInvestmentViewModel : ObservableObject
     public partial CoinSelectionViewModel CoinSelection { get; set; }
 
 
-
     [ObservableProperty]
     public partial decimal InvestedAmmount { get; set; }
 
-    [ObservableProperty]
-    public partial decimal BuyingPrice { get; set; }
+    [RelayCommand]
+    public async Task Invest()
+    {
 
+        CoinSelectionViewModelItem[] selectedCoins = [.. CoinSelection.Items.Where(item => item.IsSelected)];
+
+        List<Task> investTasks = [];
+        foreach (var coin in selectedCoins)
+        {
+            var investmentValue = InvestedAmmount / selectedCoins.Length;
+
+            InvestmentDto dto = new()
+            {
+                CoinPrice = coin.Price,
+                InvestmentValue = investmentValue,
+                CoinName = coin.Label,
+                Date = coin.Date,
+            };
+
+            List<InvestmentDto> monthlyInvestDtos = await GetMonthlyInvestDtos(dto);
+            foreach (var  invDto in monthlyInvestDtos)
+            {
+                investTasks.Add(cryptoBack.AddInvestmentAsync(invDto));
+            }
+        }
+
+        await Task.WhenAll(investTasks);
+    }
 
     public async Task LoadData()
     {
@@ -49,7 +74,7 @@ public partial class AddInvestmentViewModel : ObservableObject
         {
             var history = await GetPriceHistoryFor(coin);
 
-            var coinPrice = await FindPrice(SelectedDate, history);
+            var coinPrice = FindPrice(SelectedDate, history);
             if (coinPrice != null)
             {
 
@@ -69,6 +94,62 @@ public partial class AddInvestmentViewModel : ObservableObject
     }
 
 
+    async partial void OnSelectedDateChanging(DateTime oldValue, DateTime newValue)
+    {
+        foreach (var coinVm in CoinSelection.Items)
+        {
+            var history = await GetPriceHistoryFor(coinVm.Label);
+            var coinPrice = FindPrice(newValue, history);
+            if (coinPrice != null)
+            {
+                coinVm.Price = coinPrice.Price;
+                coinVm.Date = coinPrice.Date.UtcDateTime;
+            }
+        }
+    }
+
+
+    private async Task<List<InvestmentDto>> GetMonthlyInvestDtos (InvestmentDto initialInvestment)
+    {
+        List<InvestmentDto> rv = [initialInvestment];
+
+        var history = await GetPriceHistoryFor(initialInvestment.CoinName);
+
+        var lastPriceData = history
+            .OrderByDescending (history => history.Date)
+            .FirstOrDefault();
+
+        if (lastPriceData == null)
+        {
+            return rv;
+        }
+
+        DateTime crtDate = initialInvestment.Date.Date;
+
+        do
+        {
+            var newDate = crtDate.AddMonths(1);
+            var buyPriceData = FindPrice(newDate, history);
+
+            if (buyPriceData == null)
+                break;
+
+            InvestmentDto dto = new()
+            {
+                CoinName = initialInvestment.CoinName,
+                CoinPrice = buyPriceData.Price,
+                Date = buyPriceData.Date,
+                InvestmentValue = initialInvestment.InvestmentValue
+            };
+            rv.Add(dto);
+
+            crtDate = newDate;
+
+        } while (crtDate <= lastPriceData.Date.Date);
+        return rv;
+    }
+
+
     private async Task<IEnumerable<CoinPriceDto>> GetPriceHistoryFor(string coin)
     {
         if (!cache.TryGetValue(coin, out IEnumerable<CoinPriceDto>? history))
@@ -80,7 +161,7 @@ public partial class AddInvestmentViewModel : ObservableObject
         return history;
     }
 
-    private async static Task<CoinPriceDto?> FindPrice(DateTime date, IEnumerable<CoinPriceDto> history)
+    private static CoinPriceDto? FindPrice(DateTime date, IEnumerable<CoinPriceDto> history)
     {
         CoinPriceDto? selectedPrice = history.
             OrderByDescending(price => price.Date)
@@ -88,7 +169,6 @@ public partial class AddInvestmentViewModel : ObservableObject
 
         if (selectedPrice == null)
         {
-            await Shell.Current.DisplayAlert("Error", "Could not find a price for the selected date", "Ok");
             return null;
         }
 
