# CryptoMaui/CryptoMaui/ViewModels/CoinDataViewModel.cs
@@ -4,7 +4,7 @@ public class CoinDataViewModel
 {
     public required string CoinName { get; set; }
 
-    public required decimal CoinAmmount { get; set; }
+    public required decimal BuyingPrice { get; set; }
 
-    public required decimal Value { get; set; }
+    public required decimal InvestmentValue { get; set; }
 }
